--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Firebase SDKs (Modular) -->
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js";
-        import { getFirestore, collection, getDocs, addDoc, updateDoc, doc } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js";
+        import { getFirestore, collection, getDocs, addDoc, updateDoc, deleteDoc, doc } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js";
 
         // --- ส่วนที่ 1: วาง Firebase Config ตรงนี้ ---
         const firebaseConfig = {
@@ -54,8 +54,9 @@
             db: db,
             getDocs: getDocs,
             addDoc: addDoc,
-            updateDoc: updateDoc, // เพิ่ม updateDoc สำหรับแก้ไข
-            doc: doc,             // เพิ่ม doc สำหรับอ้างอิงเอกสาร
+            updateDoc: updateDoc,
+            deleteDoc: deleteDoc, // เพิ่ม deleteDoc
+            doc: doc,
             collection: collection
         };
     </script>
@@ -103,7 +104,8 @@
             X: <Icon path={<><path d="M18 6 6 18" /><path d="m6 6 12 12" /></>} />,
             Lock: <Icon path={<><rect width="18" height="11" x="3" y="11" rx="2" ry="2" /><path d="M7 11V7a5 5 0 0 1 10 0v4" /></>} />,
             LogOut: <Icon path={<><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4" /><polyline points="16 17 21 12 16 7" /><line x1="21" x2="9" y1="12" y2="12" /></>} />,
-            Edit: <Icon path={<><path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7" /><path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z" /></>} />
+            Edit: <Icon path={<><path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7" /><path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z" /></>} />,
+            Trash: <Icon path={<><polyline points="3 6 5 6 21 6" /><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2" /></>} />
         };
 
         const { useState, useEffect, useMemo } = React;
@@ -301,6 +303,28 @@
                     nextWeek: item.nextWeek || ''
                 });
                 setShowModal(true);
+            };
+
+             // Handle Delete
+            const handleDelete = async (item) => {
+                if(!window.confirm(`Are you sure you want to delete "${item.task}"?`)) return;
+
+                const { db, deleteDoc, doc } = window.dbService || {};
+
+                if (db && isFirebase) {
+                    try {
+                        await deleteDoc(doc(db, "tasks", item.id));
+                        setData(data.filter(d => d.id !== item.id));
+                        alert("Deleted successfully!");
+                    } catch (e) {
+                        console.error("Error deleting document: ", e);
+                        alert("Error deleting from Firebase.");
+                    }
+                } else {
+                    // Local Mock Delete
+                    setData(data.filter(d => d.id !== item.id));
+                    alert("Deleted from local data.");
+                }
             };
 
             // Handle Submit (Add or Edit)
@@ -561,9 +585,10 @@
                                         <th className="px-6 py-4 font-semibold">PM</th>
                                         <th className="px-6 py-4 font-semibold">Priority</th>
                                         <th className="px-6 py-4 font-semibold text-center">Status</th>
-                                        <th className="px-6 py-4 font-semibold text-right">Val/Hrs</th>
+                                        <th className="px-6 py-4 font-semibold text-right">Value (THB)</th>
+                                        <th className="px-6 py-4 font-semibold text-right">Man Hours</th>
                                         <th className="px-6 py-4 font-semibold bg-blue-50 text-blue-700 border-l border-blue-100">Next Week</th>
-                                        {user.role === 'admin' && <th className="px-6 py-4 font-semibold text-center w-20">Actions</th>}
+                                        {user.role === 'admin' && <th className="px-6 py-4 font-semibold text-center w-28">Actions</th>}
                                     </tr>
                                 </thead>
                                 <tbody className="text-sm divide-y divide-slate-100">
@@ -601,10 +626,11 @@
                                                     {row.status}
                                                 </span>
                                             </td>
-                                            <td className="px-6 py-4 text-right font-mono font-bold">
-                                                {row.category === 'Presale' 
-                                                    ? `${(Number(row.value || 0)/1000000).toFixed(1)}M`
-                                                    : `${row.hours || 0}h`}
+                                            <td className="px-6 py-4 text-right font-mono font-bold text-slate-700">
+                                                {row.category === 'Presale' ? (Number(row.value || 0)/1000000).toFixed(1) + 'M' : '-'}
+                                            </td>
+                                            <td className="px-6 py-4 text-right font-mono font-bold text-slate-600">
+                                                {row.category === 'BAU' ? (row.hours || 0) + 'h' : '-'}
                                             </td>
                                             <td className="px-6 py-4 text-slate-600 border-l border-slate-50 bg-slate-50/50">
                                                 {row.nextWeek ? (
@@ -616,12 +642,22 @@
                                             </td>
                                             {user.role === 'admin' && (
                                                 <td className="px-6 py-4 text-center">
-                                                    <button 
-                                                        onClick={() => handleEdit(row)}
-                                                        className="text-slate-400 hover:text-blue-600 transition-colors p-2 rounded-full hover:bg-blue-50"
-                                                    >
-                                                        {Icons.Edit}
-                                                    </button>
+                                                    <div className="flex justify-center gap-2">
+                                                        <button 
+                                                            onClick={() => handleEdit(row)}
+                                                            className="text-slate-400 hover:text-blue-600 transition-colors p-1.5 rounded-full hover:bg-blue-50"
+                                                            title="Edit"
+                                                        >
+                                                            {Icons.Edit}
+                                                        </button>
+                                                        <button 
+                                                            onClick={() => handleDelete(row)}
+                                                            className="text-slate-400 hover:text-rose-600 transition-colors p-1.5 rounded-full hover:bg-rose-50"
+                                                            title="Delete"
+                                                        >
+                                                            {Icons.Trash}
+                                                        </button>
+                                                    </div>
                                                 </td>
                                             )}
                                         </tr>
