--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                                     type="email" 
                                     value={email}
                                     onChange={(e) => setEmail(e.target.value)}
-                                    placeholder="e.g. admin@sareport.com"
+                                    placeholder="e.g. panuwatk@gmail.com"
                                     required
                                     className="w-full rounded-lg border-slate-300 border p-3 outline-none focus:ring-2 focus:ring-blue-500"
                                 />
@@ -214,8 +214,8 @@
                         <div className="mt-6 text-xs text-slate-400 bg-slate-50 p-2 rounded border border-slate-200">
                             <strong>Setup Info:</strong><br/>
                             1. Enable "Email/Password" in Firebase Console > Authentication.<br/>
-                            2. Create users (e.g., admin@sareport.com).<br/>
-                            3. Use "admin" in email for Admin rights.
+                            2. Create users (e.g., panuwatk@gmail.com).<br/>
+                            3. Use "admin" in email OR "panuwatk@gmail.com" for Admin rights.
                         </div>
                     </div>
                 </div>
@@ -256,8 +256,12 @@
                 if (auth) {
                     const unsubscribe = onAuthStateChanged(auth, (firebaseUser) => {
                         if (firebaseUser) {
-                            // Determine Role from Email (Simple Logic)
-                            const role = firebaseUser.email.toLowerCase().includes('admin') ? 'admin' : 'viewer';
+                            // Determine Role from Email
+                            // Check for 'admin' string OR specific email 'panuwatk@gmail.com'
+                            const email = firebaseUser.email.toLowerCase();
+                            const isAdmin = email.includes('admin') || email === 'panuwatk@gmail.com';
+                            const role = isAdmin ? 'admin' : 'viewer';
+                            
                             setUser({ 
                                 email: firebaseUser.email, 
                                 role: role,
