--- a/index.html
+++ b/index.html
@@ -270,4 +270,222 @@
                     nextWeek: newActivity.nextWeek.trim(),
                     okr: newActivity.okr,
                     week: getWeekNumber(newActivity.date),
-                    hours: newActivity.category === 'BAU
+                    hours: newActivity.category === 'BAU' ? Number(newActivity.value) : 0,
+                    value: newActivity.category === 'Presale' ? Number(newActivity.value) : 0,
+                    updatedAt: new Date().toISOString()
+                };
+
+                try {
+                    if (editingId) { await updateDoc(doc(db, "tasks", editingId), payload); }
+                    else { await addDoc(collection(db, "tasks"), payload); }
+                    setShowModal(false);
+                } catch (err) { alert("Save failed: " + err.message); }
+            };
+
+            const handleDelete = async (id) => {
+                if (!confirm("Confirm delete?")) return;
+                const { db, deleteDoc, doc } = window.dbService;
+                try { await deleteDoc(doc(db, "tasks", id)); } catch (err) { alert(err.message); }
+            };
+
+            if (authChecking) return <div className="p-10 text-center">Checking Authentication...</div>;
+            if (!user) return <LoginScreen />;
+
+            return (
+                <div className="p-4 md:p-8 max-w-7xl mx-auto space-y-6">
+                    <header className="flex flex-col md:flex-row justify-between items-start md:items-center gap-4">
+                        <div>
+                            <h1 className="text-2xl font-bold text-slate-800">SA Performance Dashboard</h1>
+                            <p className="text-slate-500 text-sm">Logged as: {user.email} <span className="bg-blue-600 text-white px-2 py-0.5 rounded text-[10px] font-bold uppercase ml-2">{user.role}</span></p>
+                        </div>
+                        <div className="flex gap-2">
+                            {user.role === 'admin' && (
+                                <button onClick={() => { setEditingId(null); setShowModal(true); }} className="bg-blue-600 text-white px-4 py-2 rounded-lg text-sm font-bold flex items-center gap-2 hover:bg-blue-700 shadow-lg shadow-blue-200">
+                                    {Icons.Plus} Add Activity
+                                </button>
+                            )}
+                            <button onClick={() => window.dbService.signOut(window.dbService.auth)} className="bg-white border text-slate-600 px-4 py-2 rounded-lg text-sm font-medium hover:bg-slate-50">
+                                {Icons.LogOut} Logout
+                            </button>
+                        </div>
+                    </header>
+
+                    {/* KPI Section */}
+                    <div className="grid grid-cols-2 lg:grid-cols-4 gap-4">
+                        <div className="bg-white p-6 rounded-2xl shadow-sm border border-slate-100 flex items-center gap-4">
+                            <div className="p-3 bg-blue-50 text-blue-600 rounded-xl">{Icons.Dollar}</div>
+                            <div><p className="text-xs text-slate-500 font-bold uppercase">Pipeline</p><h3 className="text-lg font-bold">{kpis.presale.toFixed(1)}M</h3></div>
+                        </div>
+                        <div className="bg-white p-6 rounded-2xl shadow-sm border border-slate-100 flex items-center gap-4">
+                            <div className="p-3 bg-emerald-50 text-emerald-600 rounded-xl">{Icons.Trending}</div>
+                            <div><p className="text-xs text-slate-500 font-bold uppercase">Win Rate</p><h3 className="text-lg font-bold">{kpis.winRate}%</h3></div>
+                        </div>
+                        <div className="bg-white p-6 rounded-2xl shadow-sm border border-slate-100 flex items-center gap-4">
+                            <div className="p-3 bg-amber-50 text-amber-600 rounded-xl">{Icons.Clock}</div>
+                            <div><p className="text-xs text-slate-500 font-bold uppercase">BAU Hours</p><h3 className="text-lg font-bold">{kpis.bau}h</h3></div>
+                        </div>
+                        <div className="bg-white p-6 rounded-2xl shadow-sm border border-slate-100 flex items-center gap-4">
+                            <div className="p-3 bg-purple-50 text-purple-600 rounded-xl">{Icons.Target}</div>
+                            <div><p className="text-xs text-slate-500 font-bold uppercase">OKR Progress</p><h3 className="text-lg font-bold">{kpis.okr}%</h3></div>
+                        </div>
+                    </div>
+
+                    {/* Charts */}
+                    <div className="grid grid-cols-1 lg:grid-cols-3 gap-6">
+                        <div className="lg:col-span-2 bg-white p-6 rounded-2xl shadow-sm border min-h-[350px]">
+                            <h4 className="font-bold text-slate-700 mb-6">Weekly Activity Trend (Last 6 Weeks)</h4>
+                            <div className="h-[280px]">
+                                <ResponsiveContainer width="100%" height="100%">
+                                    <BarChart data={chartData}>
+                                        <CartesianGrid strokeDasharray="3 3" vertical={false} stroke="#f1f5f9" />
+                                        <XAxis dataKey="name" axisLine={false} tickLine={false} />
+                                        <YAxis axisLine={false} tickLine={false} />
+                                        <Tooltip />
+                                        <Legend />
+                                        <Bar dataKey="presale" name="Presale (M)" fill="#3b82f6" radius={[4, 4, 0, 0]} />
+                                        <Bar dataKey="bau" name="BAU (Hours)" fill="#f59e0b" radius={[4, 4, 0, 0]} />
+                                    </BarChart>
+                                </ResponsiveContainer>
+                            </div>
+                        </div>
+                        <div className="bg-white p-6 rounded-2xl shadow-sm border min-h-[350px]">
+                            <h4 className="font-bold text-slate-700 mb-6 text-center">Status Distribution</h4>
+                            <div className="h-[280px]">
+                                <ResponsiveContainer width="100%" height="100%">
+                                    <PieChart>
+                                        <Pie data={pieData} innerRadius={60} outerRadius={80} paddingAngle={5} dataKey="value">
+                                            {pieData.map((entry, index) => <Cell key={`cell-${index}`} fill={COLORS[index % COLORS.length]} />)}
+                                        </Pie>
+                                        <Tooltip />
+                                        <Legend verticalAlign="bottom" height={36}/>
+                                    </PieChart>
+                                </ResponsiveContainer>
+                            </div>
+                        </div>
+                    </div>
+
+                    {/* Table Section */}
+                    <div className="bg-white rounded-2xl shadow-sm border overflow-hidden">
+                        <div className="p-4 bg-slate-50/50 border-b flex justify-between items-center">
+                            <h4 className="text-xs font-bold text-slate-500 uppercase tracking-widest">Detailed Logs</h4>
+                            <button onClick={() => setShowDone(!showDone)} className="text-xs font-bold text-blue-600">
+                                {showDone ? "Hide Done Tasks" : "Show All Tasks"}
+                            </button>
+                        </div>
+                        <div className="overflow-x-auto">
+                            <table className="w-full text-left">
+                                <thead className="bg-slate-50 text-slate-400 text-[10px] uppercase font-bold">
+                                    <tr>
+                                        <th className="px-6 py-4">Project / Week</th>
+                                        <th className="px-6 py-4 bg-blue-50/30">Activity Note (This Week)</th>
+                                        <th className="px-6 py-4 text-center">Status</th>
+                                        <th className="px-6 py-4 text-right">Val/Hrs</th>
+                                        <th className="px-6 py-4">Next Plan</th>
+                                        {user.role === 'admin' && <th className="px-6 py-4 text-center">Action</th>}
+                                    </tr>
+                                </thead>
+                                <tbody className="text-sm divide-y">
+                                    {filteredData.map(row => (
+                                        <tr key={row.id} className="hover:bg-slate-50 group">
+                                            <td className="px-6 py-4">
+                                                <div className="text-blue-600 font-bold text-xs">{row.week}</div>
+                                                <div className="font-bold text-slate-800 text-base">{row.task}</div>
+                                                <div className="text-[10px] text-slate-400 flex items-center gap-1 mt-1">{Icons.Calendar} Start: {row.startDate || row.date}</div>
+                                            </td>
+                                            <td className="px-6 py-4 bg-blue-50/10 min-w-[280px]">
+                                                <div className="text-[10px] text-blue-400 font-black mb-1">LOGGED: {row.date}</div>
+                                                <div className="text-slate-800 leading-relaxed font-medium whitespace-pre-wrap">{row.note || <span className="text-slate-300 italic">(No note)</span>}</div>
+                                            </td>
+                                            <td className="px-6 py-4 text-center">
+                                                <span className={`px-3 py-1 rounded-full text-[10px] font-black uppercase ${['Won', 'Done'].includes(row.status) ? 'bg-emerald-100 text-emerald-700' : 'bg-slate-100 text-slate-600'}`}>
+                                                    {row.status}
+                                                </span>
+                                            </td>
+                                            <td className="px-6 py-4 text-right font-mono font-black text-slate-700">
+                                                {row.category === 'Presale' ? `${Number(row.value || 0).toFixed(1)}M` : `${row.hours || 0}h`}
+                                            </td>
+                                            <td className="px-6 py-4 text-xs text-slate-500 italic">{row.nextWeek || "-"}</td>
+                                            {user.role === 'admin' && (
+                                                <td className="px-6 py-4 text-center">
+                                                    <div className="flex justify-center gap-1 opacity-0 group-hover:opacity-100">
+                                                        <button onClick={() => handleEdit(row)} className="p-2 text-blue-600 hover:bg-blue-100 rounded-full">{Icons.Edit}</button>
+                                                        <button onClick={() => handleDelete(row.id)} className="p-2 text-rose-600 hover:bg-rose-100 rounded-full">{Icons.Trash}</button>
+                                                    </div>
+                                                </td>
+                                            )}
+                                        </tr>
+                                    ))}
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+
+                    {/* Modal */}
+                    {showModal && (
+                        <div className="fixed inset-0 bg-black/60 z-50 flex items-center justify-center p-4 modal-overlay overflow-y-auto">
+                            <div className="bg-white rounded-2xl shadow-2xl w-full max-w-lg modal-content">
+                                <div className="p-6 border-b flex justify-between items-center bg-slate-50 rounded-t-2xl">
+                                    <h3 className="font-bold text-lg text-slate-800">{editingId ? 'Edit Activity' : 'Add New Activity'}</h3>
+                                    <button onClick={() => setShowModal(false)} className="p-2 hover:bg-slate-200 rounded-full">{Icons.X}</button>
+                                </div>
+                                <form onSubmit={handleAddSubmit} className="p-6 space-y-4 max-h-[75vh] overflow-y-auto text-left">
+                                    <div className="grid grid-cols-2 gap-4">
+                                        <div><label className="text-xs font-bold text-slate-500 uppercase mb-1 block">Log Date</label>
+                                            <input type="date" required className="w-full border p-2 rounded-lg text-sm" value={newActivity.date} onChange={e => setNewActivity({...newActivity, date: e.target.value})} />
+                                        </div>
+                                        <div><label className="text-xs font-bold text-slate-500 uppercase mb-1 block">Start Date</label>
+                                            <input type="date" className="w-full border p-2 rounded-lg text-sm" value={newActivity.startDate} onChange={e => setNewActivity({...newActivity, startDate: e.target.value})} />
+                                        </div>
+                                    </div>
+                                    <div className="grid grid-cols-2 gap-4">
+                                        <div><label className="text-xs font-bold text-slate-500 uppercase mb-1 block">Category</label>
+                                            <select className="w-full border p-2 rounded-lg text-sm" value={newActivity.category} onChange={e => setNewActivity({...newActivity, category: e.target.value})}><option value="Presale">Presale</option><option value="BAU">BAU</option></select>
+                                        </div>
+                                        <div><label className="text-xs font-bold text-slate-500 uppercase mb-1 block">Project Name</label>
+                                            <input type="text" required className="w-full border p-2 rounded-lg text-sm" value={newActivity.task} onChange={e => setNewActivity({...newActivity, task: e.target.value})} />
+                                        </div>
+                                    </div>
+                                    <div><label className="text-xs font-bold text-blue-600 uppercase mb-1 block underline">What did you do this week?</label>
+                                        <textarea required rows="4" className="w-full border p-2 rounded-lg text-sm outline-none focus:ring-2 focus:ring-blue-500 bg-blue-50/20" value={newActivity.note} onChange={e => setNewActivity({...newActivity, note: e.target.value})} placeholder="Describe activity details..."></textarea>
+                                    </div>
+                                    <div className="grid grid-cols-2 gap-4">
+                                        <div><label className="text-xs font-bold text-slate-500 uppercase mb-1 block">Customer</label>
+                                            <input type="text" className="w-full border p-2 rounded-lg text-sm" value={newActivity.customer} onChange={e => setNewActivity({...newActivity, customer: e.target.value})} />
+                                        </div>
+                                        <div><label className="text-xs font-bold text-slate-500 uppercase mb-1 block">PM</label>
+                                            <input type="text" className="w-full border p-2 rounded-lg text-sm" value={newActivity.projectManager} onChange={e => setNewActivity({...newActivity, projectManager: e.target.value})} />
+                                        </div>
+                                    </div>
+                                    <div className="grid grid-cols-3 gap-4">
+                                        <div><label className="text-xs font-bold text-slate-500 uppercase mb-1 block">Status</label>
+                                            <select className="w-full border p-2 rounded-lg text-sm" value={newActivity.status} onChange={e => setNewActivity({...newActivity, status: e.target.value})}>
+                                                {newActivity.category === 'Presale' ? <><option value="Lead">Lead</option><option value="Proposal">Proposal</option><option value="Bit">Bit</option><option value="Won">Won</option><option value="Lost">Lost</option></> : <><option value="In Progress">In Progress</option><option value="Done">Done</option><option value="Pending">Pending</option></>}
+                                            </select>
+                                        </div>
+                                        <div><label className="text-xs font-bold text-slate-500 uppercase mb-1 block">OKR</label>
+                                            <select className="w-full border p-2 rounded-lg text-sm" value={newActivity.okr} onChange={e => setNewActivity({...newActivity, okr: e.target.value})}><option value="Yes">Yes</option><option value="No">No</option></select>
+                                        </div>
+                                        <div><label className="text-xs font-bold text-slate-500 uppercase mb-1 block">{newActivity.category === 'Presale' ? 'Val(M)' : 'Hrs'}</label>
+                                            <input type="number" step="any" className="w-full border p-2 rounded-lg text-sm" value={newActivity.value} onChange={e => setNewActivity({...newActivity, value: e.target.value})} />
+                                        </div>
+                                    </div>
+                                    <div><label className="text-xs font-bold text-indigo-600 uppercase mb-1 block">Plan for Next Week</label>
+                                        <input type="text" className="w-full border p-2 rounded-lg text-sm bg-slate-50" value={newActivity.nextWeek} onChange={e => setNewActivity({...newActivity, nextWeek: e.target.value})} placeholder="Next step plan..." />
+                                    </div>
+                                    <div className="flex justify-end gap-3 pt-4 border-t">
+                                        <button type="button" onClick={() => setShowModal(false)} className="px-4 py-2 text-sm text-slate-400">Cancel</button>
+                                        <button type="submit" className="px-8 py-2 bg-blue-600 text-white rounded-xl text-sm font-bold shadow-lg shadow-blue-200">Save Activity</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    )}
+                </div>
+            );
+        };
+
+        const root = ReactDOM.createRoot(document.getElementById('root'));
+        root.render(<App />);
+    </script>
+</body>
+</html>
