--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             return (
                 <div className="min-h-screen flex items-center justify-center bg-slate-100 p-4 text-left">
                     <form onSubmit={handleLogin} className="bg-white p-8 rounded-3xl shadow-xl w-full max-w-md space-y-4">
-                        <h2 className="text-2xl font-black text-center text-slate-800 uppercase tracking-tighter">Dashboard Login</h2>
+                        <h2 className="text-2xl font-black text-center text-slate-800 uppercase tracking-tighter">P P Dashboard</h2>
                         <input type="email" placeholder="Email" value={email} onChange={e => setEmail(e.target.value)} required className="w-full border p-4 rounded-2xl outline-none focus:ring-2 focus:ring-blue-500" />
                         <input type="password" placeholder="Password" value={password} onChange={e => setPassword(e.target.value)} required className="w-full border p-4 rounded-2xl outline-none focus:ring-2 focus:ring-blue-500" />
                         {error && <p className="text-rose-500 text-xs font-bold text-center bg-rose-50 p-3 rounded-xl border border-rose-100">{error}</p>}
