--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                     {/* Header with Week Filter */}
                     <header className="flex flex-col lg:flex-row justify-between items-start lg:items-center gap-4 bg-white p-6 rounded-3xl shadow-sm border border-slate-200">
                         <div>
-                            <h1 className="text-2xl font-black text-slate-800 tracking-tighter uppercase">SA Performance Dashboard</h1>
+                            <h1 className="text-2xl font-black text-slate-800 tracking-tighter uppercase">Performance Dashboard</h1>
                             <div className="flex items-center gap-2 mt-1">
                                 <span className="text-slate-400 text-xs font-bold uppercase tracking-widest">{user.email}</span>
                                 <span className="bg-blue-600 text-white px-2 py-0.5 rounded text-[10px] font-black uppercase">{user.role}</span>
